lets try building android now

--- a/platforms/android/app/src/main/assets/www/index.html
+++ b/platforms/android/app/src/main/assets/www/index.html
@@ -35,17 +35,19 @@
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="css/index.css">
-        <title>Hello World</title>
+				
+        <title>Hello GreenHub</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
+			
+
+	<svg viewBox="-5 -5 110 110" class="svg svelte-m7ih9d"><path stroke="rgba(0, 0, 0, 0.5)" d="M0"></path><path d="M0 50 Q25 75, 50 50 T 100 50 M50 0 Q25 25, 50 50 T 50 100 M0 50 Q25 25, 50 50 T 100 50 M50 0 Q75 25, 50 50 T 50 100"></path></svg>
+
+
+
+</svg>
+<script>
+	document.documentElement.style.setProperty('background-color', "#"+((1<<24)*Math.random()|0).toString(16));
+	</script>
     </body>
 </html>
