added a ribbon for github

--- a/www/index.html
+++ b/www/index.html
@@ -45,7 +45,7 @@
         <title>Hello GreenHub</title>
     </head>
     <body>
-						
+				<a href='https://github.com/AGoblinKing/greenhub/generate' style='position:fixed;padding:5px 45px;width:128px;top:50px;right:-50px;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);box-shadow:0 0 0 3px #0091ff;text-shadow:0 0 0 #ffffff;background-color:#0091ff;color:#ffffff;font-size:13px;font-family:sans-serif;text-decoration:none;font-weight:bold;border:2px dotted #ffffff;-webkit-backface-visibility:hidden;letter-spacing:.5px;'>Use on GitHub</a>		
 
 	<svg viewBox="-5 -5 110 110" class="svg svelte-m7ih9d">
 		
@@ -53,6 +53,7 @@
 		<path d="M0 50 Q25 75, 50 50 T 100 50 M50 0 Q25 25, 50 50 T 50 100 M0 50 Q25 25, 50 50 T 100 50 M50 0 Q75 25, 50 50 T 50 100"/>
 
   </svg>
+
 
 	<script>
 		
